Changed function for random word, added first validatos and added new function for exercises